--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,334 +1,151 @@
-/*
-* Links
-* ========================================================================== */
-a {
-  color: #333;
-  &:hover,
-  &:focus,
-  &:active { text-decoration: none; }
+// media queries
+$media-query-min: 19rem;
+$media-query-med-1: 27rem;
+$media-query-med-2: 35rem;
+$media-query-max: 50rem;
+$media-query-max-extra: 80rem;
+
+/*************************************************************************
+                          VERTICAL-RHYTHM
+/*************************************************************************/
+
+/* Use only multiples of these values for setting puddings and margins. This
+ * will keep vertical rhythm between elements. */
+
+$l-h-baseline: $l-h-default * 0.5;
+$l-h-baseline-double: $l-h-default;
+$l-h-baseline-half: $l-h-default * 0.25;
+
+
+
+/*************************************************************************
+                             DISPLAY
+/*************************************************************************/
+
+//---------------------------INLINE-BLOCK
+
+.tags,
+.tags li {
+  display: inline-block;
 }
 
-
-
-/*
-* Toggle Button
-* ========================================================================== */
-.nav-main a:not(.blog-logo) {
-  display: none;
-}
-
-#menu-checkbox {
-  display: none;
-}
-
-.toggle-button {
-  position: absolute;
+//---------------------------BLOCK
+img,
+#footer-quote p:before,
+.contact-form input
+{
   display: block;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
+}
+
+//---------------------------NONE
+
+.sep {
+  display: none;
+
+}
+
+/*************************************************************************
+                                WIDTH-HEIGHT
+/*************************************************************************/
+
+#footer-quote p:before {
+  width: $l-h-baseline-half * 5;
+  height: $l-h-baseline-half * 5;
+}
+
+/*************************************************************************
+                                HEIGHT
+/*************************************************************************/
+
+.fancy-nav:before,
+.fancy-nav:after {
+  height: 2px;
+}
+
+/*************************************************************************
+                                WIDTH
+/*************************************************************************/
+
+//----------------------------MAX-WIDTH
+
+article,
+#footer-quote {
+  max-width: $media-query-med-2;
+}
+
+.paginator ul,
+#main-nav {
+  max-width: $media-query-min * 0.5;
+}
+
+//----------------------------MIN-WIDTH
+
+#wrapper {
+  min-width: $media-query-min;
+}
+
+
+//----------------------------WIDTH=100%
+main img,
+.fancy-nav:before,
+.fancy-nav:after,
+.contact-form textarea {
+  width: 100%;
+}
+
+.contact-form input[type="submit"] {
+  width: $l-h-baseline-double * 4;
+}
+
+/*************************************************************************
+                                POSITION
+/*************************************************************************/
+
+//----------------------------RELATIVE
+
+#main-nav li,
+.paginator li {
+  position: relative;
+}
+
+//----------------------------ABSOLUTE
+
+.fancy-nav:before,
+.fancy-nav:after {
+  position: absolute;
+}
+
+/*************************************************************************
+                                LEFT
+/*************************************************************************/
+
+//----------------------------LEFT=0
+.fancy-nav:before,
+.fancy-nav:after {
   left: 0;
+}
+
+/*************************************************************************
+                                RIGHT
+/*************************************************************************/
+
+
+/*************************************************************************
+                                TOP
+/*************************************************************************/
+
+//----------------------------TOP=0
+.fancy-nav:before {
   top: 0;
-  color: #000;
-  font-size: 18px;
 }
 
-#menu-checkbox:checked + .nav-main a:not(.blog-logo) {
-  display: block;
-  width: 100%;
-  height: 40px;
-  line-height: 40px;
-}
+/*************************************************************************
+                                BOTTOM
+/*************************************************************************/
 
-#menu-checkbox:checked + .nav-main {
-  -webkit-flex-flow: column nowrap;
-  -ms-flex-flow: column nowrap;
-  flex-flow: column nowrap;
-  height: 100%;
-}
-
-.toggle-button:after {
-  content: attr(data-open);
-  cursor: pointer;
-  padding: 15px;
-  font-size: 1.6rem;
-  text-align: center;
-}
-
-#menu-checkbox:checked + .nav-main .toggle-button:after {
-  content: attr(data-close);
+//----------------------------BOTTOM=0
+.fancy-nav:after {
+  bottom: 0;
 }
 
 
-
-@media screen and (min-width: $md-break-point){
-  .toggle-button {
-    display: none;
-  }
-}
-
-
-/*
-* Header
-* ========================================================================== */
-.main-header {
-  background-color: #fdfdfd;
-  position: fixed;
-  z-index: 100;
-  width: 100%;
-  top: 0;
-  border-bottom: 1px solid #ddd;
-}
-
-
-
-/*
-* Header Navigation
-* ========================================================================== */
-.nav-main {
-  height: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  -ms-flex-flow: row wrap;
-  flex-flow: row wrap;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  font-weight: 400;
-  font-family: "Roboto Condensed", sans-serif;
-  padding: 0 1rem;
-  text-transform: uppercase;
-  a {
-    -webkit-order: 1;
-    -ms-flex-order: 1;
-    order: 1;
-    line-height: 50px;
-    margin: auto;
-    color: #333;
-    text-decoration: none;
-    &:hover,
-    &:focus,
-    &:active {
-      color: #766257;
-    }
-  }
-}
-
-
-
-/*
-* Logotypes
-* ========================================================================== */
-.nav-main {
-  .blog-logo {
-    width: 100%;
-    line-height: 50px;
-    font-size: 18px;
-    text-decoration: none;
-    -webkit-order: 0;
-    -ms-flex-order: 0;
-    order: 0;
-    border-bottom: 0;
-    text-align: center;
-    font-weight: bold;
-  }
-}
-
-
-
-/*
-* Aside
-* ========================================================================== */
-.sidebar {
-  background-position: top center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-color: #000;
-  display: none;
-}
-
-.cover {
-  transition: all 0.8s ease 0s;
-  text-align: center;
-  position: relative;
-  background: linear-gradient(180deg, transparent, rgba(0, 0, 0, 0.75)) repeat scroll 0% 0% transparent;
-}
-
-.cover-text {
-  color: #fff;
-  text-shadow: 2px 0 5px #333;
-  position: absolute;
-  bottom: 20%;
-  width: 80%;
-  left: 10%;
-  .heading a {
-    position: relative;
-    margin-right: 5px;
-    text-decoration: none;
-    &:hover { text-decoration: underline; }
-    &:not(:last-child):after {
-      content: " , ";
-      position: absolute;
-      bottom: 0;
-    }
-  }
-}
-
-.sidebar,
-.cover {
-  width: 100%;
-  height: 100vh;
-}
-
-
-
-/*
-* Article
-* ========================================================================== */
-main {
-  padding-top: 3em;
-}
-
-.index-page {
-  position: relative;
-  &:after {
-    content: "***";
-    position: absolute;
-    margin-top: 1em;
-    width: 100px;
-    left: 50%;
-  }
-}
-
-article {
-  padding: 2em 1em;
-  img,
-  embed,
-  object,
-  video,
-  iframe {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
-  }
-
-  &:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-  h1 { margin-top: 0; }
-
-  img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 1em auto;
-    padding: .2em;
-    background-color: #fff;
-  }
-}
-
-.post-meta {
-  padding-bottom: .5em;
-  text-transform: uppercase;
-  color: #b9b9b9;
-  font-size: 70%;
-  font-weight: bold;
-  font-family: 'Roboto Condensed', sans-serif;
-  a, a:hover, a:focus, a:visited {
-    color: #333;
-  }
-
-  .meta-black {
-    color: #333;
-  }
-
-}
-
-
-/*
-* Archive
-* ========================================================================== */
-.year {
-  padding: 0;
-  list-style: none;
-  text-transform: uppercase;
-  font-size: 13px
-}
-
-.year li {
-  padding: 5px;
-  padding: 8px 10px;
-  border-bottom: 1px dotted #eae4da
-}
-
-.year a {
-  text-decoration: none
-}
-
-.year a:hover {
-  text-decoration: underline
-}
-
-.date {
-  text-align: right;
-  float: right;
-  color: #d4d4d4;
-  display: none;
-}
-
-
-
-/*
-* Footer
-* ========================================================================== */
-.blog-footer {
-  height: 4em;
-  margin: 5em auto 0;
-  font-size: 70%;
-  border-top: 1px solid #ddd;
-  text-transform: uppercase;
-  text-align: center;
-  line-height: 1.5em;
-}
-
-
-
-/*
-* Next/Previous Posts
-* ========================================================================== */
-
-.link-to-post {
-  width: 100%;
-  display: block;
-  margin: 10px auto;
-  padding: 1em;
-  text-decoration: none;
-  outline: none;
-  text-align: center;
-  border: 1px solid #ddd;
-  transition: border-color .5s ease-in 0s;
-  &:hover { border-color: #0D243B; }
-
-  &__prev, &__next {
-    font-size: .8em;
-    color: #333;
-    margin: 10px 0;
-  }
-
-  &__title {
-    font-size: 1em;
-    font-weight: bold;
-    color: #333;
-    margin-top: 10px;
-    display: block;
-  }
-}
