--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,6 +2,23 @@
 layout: default
 ---
 
-{% for page in site.categories[page.category] %}
+<!-- {% for page in site.categories[page.category] %}
 {% include articles.html %}
-{% endfor %}
+{% endfor %} -->
+
+
+<ul class="posts-list">
+  
+    {% assign category = page.category | default: page.title %}
+    {% for post in site.categories[category] %}
+      <li>
+        <h3>
+          <a href="{{ site.baseurl }}{{ post.url }}">
+            {{ post.title }}
+          </a>
+          <small>{{ post.date | date_to_string }}</small>
+        </h3>
+      </li>
+    {% endfor %}
+    
+  </ul>
