--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<!-- {% for page in site.categories[page.category] %}
+{% for page in site.categories[page.category] %}
 {% include articles.html %}
-{% endfor %} -->
+{% endfor %}
 
 
-<ul class="posts-list">
+<!-- <ul class="posts-list">
   
     {% assign category = page.category | default: page.title %}
     {% for post in site.categories[category] %}
@@ -21,4 +21,4 @@ layout: default
       </li>
     {% endfor %}
     
-  </ul>
+  </ul> -->
