--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -5,7 +5,7 @@ layout: page
 <!-- {% for page in site.categories[page.category] %}
     <a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first }}"></a> -->
 
-{% for page in site.categories[page.category] %}
+<!-- {% for page in site.categories[page.category] %}
     {% capture cat %}{{ category | first }}{% endcapture %}
     <h2 id="{{cat}}">{{ cat | capitalize }}</h2>
     {% for desc in site.descriptions %}
@@ -26,4 +26,4 @@ layout: page
     {% if forloop.last == false %}<hr>{% endif %}
   {% endfor %}
   <br>
-  
+   -->
