--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,6 +2,25 @@
 layout: page
 ---
 
+
+{% for category in site.categories %}
+  {% capture cat %}{{ category | first }}{% endcapture %}
+  <h2 id="{{cat}}">{{ cat | capitalize }}</h2>
+  <ul class="posts-list">
+    {% for post in site.categories[cat] %}
+      <li>
+        <strong>
+          <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+        </strong>
+        <span class="post-date">- {{ post.date | date_to_long_string }}</span>
+      </li>
+    {% endfor %}
+  </ul>
+  {% if forloop.last == false %}<hr>{% endif %}
+{% endfor %}
+<br>
+
+
 <!-- {% for page in site.categories[page.category] %}
     <a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first }}"></a> -->
 
