--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,11 @@
     <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
 				{% include nav_links.html %}
+        
       </ul>
     </nav>
+    {% for category in site.categories %}
+      <li>{{category | first}} ({{category | last | size}})</li>
+    {% endfor %}
   </div>
 </header>
