--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,18 +10,10 @@
     <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">
       <i class="fa fa-bars"></i>
     </a>
-    <!-- <nav role="navigation">
+    <nav role="navigation">
       <ul id="js-navigation-menu" class="navigation-menu show">
 				{% include nav_links.html %}
-        
       </ul>
-    </nav> -->
-    <div class="category-data"></div>
-      <ul>
-        {% for category in site.categories %}
-          <li>{{category | first}} ({{category | last | size}})</li>
-        {% endfor %}
-      </ul>
-    </div>
+    </nav>
   </div>
 </header>
