--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 {% for category in site.categories[page.category] %}
-
+{% endfor %}
 
 <!-- 
 {% for category in site.categories[page.category] %}
