--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,6 +3,8 @@ layout: page
 ---
 
 {% for category in site.categories[page.category] %}
+<a class="fancy-nav" href="{{ site.baseurl }}/categories/{{ link | first }}"></a>
+{% include articles.html %}
 {% endfor %}
 
 <!-- 
