--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,29 +2,26 @@
 layout: page
 ---
 
-{% for category in site.categories[page.categories] %}
-  <li><a href="{{ site.baseurl }}/categories/{{ category | first }}">{{ category | first }}</a></li>
-{% endfor %}
+{% assign selected_category = page.category | default: site.categories.first[0] %}
 
-
-<!-- {% for category in site.categories %}
-  {% capture cat %}{{ category | first }}{% endcapture %}
-  <h2 id="{{cat}}">{{ cat | capitalize }}</h2>
-  {% for desc in site.descriptions %}
-    {% if desc.cat == cat %}
-      <p class="desc"><em>{{ desc.desc }}</em></p>
-    {% endif %}
-  {% endfor %}
-  <ul class="posts-list">
-  {% for post in site.categories[cat] %}
-    <li>
-      <strong>
-        <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-      </strong>
-      <span class="post-date">- {{ post.date | date_to_long_string }}</span>
-    </li>
-  {% endfor %}
-  </ul>
-  {% if forloop.last == false %}<hr>{% endif %}
+{% for category in site.categories %}
+  {% if category[0] == selected_category %}
+    {% assign cat = category[0] %}
+    {% for desc in site.descriptions %}
+      {% if desc.cat == cat %}
+        <p class="desc"><em>{{ desc.desc }}</em></p>
+      {% endif %}
+    {% endfor %}
+    <ul class="posts-list"> <!-- category list -->
+      {% for post in site.categories[cat] %}
+        <li>
+          <strong>
+            <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          </strong>
+          <span class="post-date">- {{ post.date | date_to_long_string }}</span>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
 {% endfor %}
-<br> -->
+<br>
