Theme custum 1) background image 2) main text color 3) footer color

--- a/_sass/base/_buttons.scss
+++ b/_sass/base/_buttons.scss
@@ -2,7 +2,8 @@
 button {
   @include appearance(none);
   -webkit-font-smoothing: antialiased;
-  background-color: $action-color;
+  /*background-color: $action-color;*/
+  background-color: #474747;
   border-radius: $base-border-radius;
   border: none;
   color: #fff;
@@ -20,7 +21,8 @@ button {
 
   &:hover,
   &:focus {
-    background-color: darken($action-color, 15%);
+    /*background-color: darken($action-color, 15%);*/
+    background-color: darken(#474747, 15%);
     color: #fff;
   }
 
