--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -113,7 +113,8 @@ pre code.hljs {
 *	Header
 */
 .navigation {
-	box-shadow: 0 2px $highlight-color;
+	/*box-shadow: 0 2px $highlight-color;*/
+	box-shadow: 0 2px #474747;
 	padding: 0 1em;
 	margin: 0;
 	// Remove this to make header scrollable again
@@ -257,7 +258,8 @@ pre code.hljs {
 	.site-header-container {
 		color: $white;
 		text-shadow: 0 2px 1px rgba(0,0,0,0.33);
-		background-color: $highlight-color;
+		/*background-color: $highlight-color;*/
+		background-color: #474747;
 		.site-header{
 			.title {
 				font-size: modular-scale(6);
@@ -374,7 +376,8 @@ pre code.hljs {
 .site-footer {
 	$link-color: $white;
 	padding: 1em 1em 2em 1em;
-	background-color: $highlight-color;
+	/*background-color: $highlight-color;*/
+	background-color: #474747;
 	color: $white;
 	a {
 	  color: $link-color;
