--- a/_sass/base/_forms.scss
+++ b/_sass/base/_forms.scss
@@ -42,11 +42,13 @@ textarea {
   width: 100%;
 
   &:hover {
-    border-color: darken($base-border-color, 10%);
+    /*border-color: darken($base-border-color, 10%);*/
+    border-color: darken(#474747, 10%);
   }
 
   &:focus {
-    border-color: $action-color;
+    /*border-color: $action-color;*/
+    border-color: #474747;
     box-shadow: $form-box-shadow-focus;
     outline: none;
   }
