--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,10 +41,10 @@ layout: default
 {% endif %}
 {% endif %}
 
-<section class="rss">
+<!-- <section class="rss">
   <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
-</section>
-
+</section> -->
+<!-- 
 <section class="share">
   <span>Share: </span>
   {% for social in site.social %}
@@ -90,7 +90,7 @@ layout: default
       </a>
     {% endif %}
   {% endfor %}
-</section>
+</section> -->
 {% if site.inter_post_navigation == true %}
 	<section class="post-navigation">
 		<span class="prev-post">
