--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,15 @@
       </ul>
     </div>
 
+    <div class = "today">
+
+      <p><strong>clients</strong></p>
+        <ul>
+          <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwlsellfe-joon.github.io&count_bg=%23ABAEA9&title_bg=%23555555&icon=expertsexchange.svg&icon_color=%23E7E7E7&title=Today&edge_flat=false"/></a>  
+        </ul>
+    </div>
+
+
     <!-- <div class="site-signature">
       <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
       <p class="text">{{ site.description }}</p>
