--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,6 +41,16 @@ layout: default
 {% endif %}
 {% endif %}
 
+
+<section class="comments">
+  <script src="https://utteranc.es/client.js"
+          repo="Wlsellfe-joon/Blog-comments"
+          issue-term="pathname"
+          theme="github-light"
+          crossorigin="anonymous"
+          async>
+  </script>
+</section>
 <!-- <section class="rss">
   <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
 </section> -->
