--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ layout: default
 {% endif %}
 
 
-<!-- <section class="comments">
+<section class="comments">
   <script src="https://utteranc.es/client.js"
           repo="Wlsellfe-joon/Blog-comments"
           issue-term="pathname"
@@ -50,7 +50,7 @@ layout: default
           crossorigin="anonymous"
           async>
   </script>
-</section> -->
+</section>
 <!-- <section class="rss">
   <p class="rss-subscribe text"><strong>Subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></strong></p>
 </section> -->
