--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,10 @@ layout: default
   {{ content }}
 </article>
 
+<section class="feedback">
+    If there are any <strong>changes</strong> or <strong>additions</strong> to the posting content, <strong>feedback is welcome</strong> at any time.
+</section>
+
 {% if site.jekyll-archives %}
 {% if page.tags.size > 0 %}
 <section class="tags">
