--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -143,7 +143,7 @@ pre code.hljs {
   	@include outer-container;
     @include clearfix;
     position: relative;
-	max-width: 1000px; // Menu bar size here
+	//max-width: 1000px; // Menu bar size here
     margin: 0 auto; 
   }
   .logo {
@@ -222,7 +222,7 @@ pre code.hljs {
 	.wrapper {
 		@include outer-container;
 		padding: 0.5em;
-		max-width: 1000px; // Main page width
+		//max-width: 1000px; // Main page width
 		margin: 0 auto;
 	}
 	/*
